[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/Cards/card_50cent.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/Buildings/buildings_row4.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/Buildings/buildings_row2.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/Buildings/buildings_row1.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/Buildings/buildings_row5.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/Buildings/buildings_row3.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/Buildings/background.png" type="Texture" id=8]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="party_viewer" type="Node2D" parent="."]

[node name="background" type="Sprite" parent="party_viewer"]
texture = ExtResource( 8 )
centered = false

[node name="buildings" type="Node2D" parent="party_viewer"]

[node name="layer_5" type="Sprite" parent="party_viewer/buildings"]
texture = ExtResource( 6 )
centered = false

[node name="layer_4" type="Sprite" parent="party_viewer/buildings"]
texture = ExtResource( 3 )
centered = false

[node name="layer_3" type="Sprite" parent="party_viewer/buildings"]
texture = ExtResource( 7 )
centered = false

[node name="layer_2" type="Sprite" parent="party_viewer/buildings"]
texture = ExtResource( 4 )
centered = false

[node name="layer_1" type="Sprite" parent="party_viewer/buildings"]
texture = ExtResource( 5 )
centered = false

[node name="card" type="Node2D" parent="party_viewer"]

[node name="background" type="Sprite" parent="party_viewer/card"]
texture = ExtResource( 2 )
centered = false

[node name="lbl_question" type="Label" parent="party_viewer/card"]
margin_left = 70.0
margin_top = 231.0
margin_right = 328.0
margin_bottom = 365.0
text = "Ola!
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_choice_1" type="Button" parent="party_viewer/card"]
margin_left = 70.3273
margin_top = 383.99
margin_right = 328.327
margin_bottom = 425.99
text = "Tothetuho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_choice_2" type="Button" parent="party_viewer/card"]
margin_left = 70.3273
margin_top = 440.99
margin_right = 328.327
margin_bottom = 482.99
text = "Tothetuho"

[node name="btn_choice_3" type="Button" parent="party_viewer/card"]
margin_left = 70.3273
margin_top = 496.99
margin_right = 328.327
margin_bottom = 538.99
text = "Tothetuho"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel2" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 810.628
margin_right = 1021.63
margin_bottom = 152.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="lbl_metric_1" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 29.1588
margin_top = 24.7673
margin_right = 211.159
margin_bottom = 55.7673
text = "Metric 1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_metric_2" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 29.1588
margin_top = 48.7673
margin_right = 211.159
margin_bottom = 79.7673
text = "Metric 1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_metric_3" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 29.1588
margin_top = 72.7673
margin_right = 211.159
margin_bottom = 103.767
text = "Metric 1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_metric_4" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 29.1588
margin_top = 96.7673
margin_right = 211.159
margin_bottom = 127.767
text = "Metric 1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_metric_5" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 29.1588
margin_top = 120.767
margin_right = 211.159
margin_bottom = 151.767
text = "Metric 1
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="party_viewer/card/btn_choice_1" to="." method="_on_btn_choice_1_pressed"]
[connection signal="pressed" from="party_viewer/card/btn_choice_2" to="." method="_on_btn_choice_2_pressed"]
[connection signal="pressed" from="party_viewer/card/btn_choice_3" to="." method="_on_btn_choice_3_pressed"]
